メインページ名をindex.html にした。

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="row">
         <div id = "headerArea" class="col-sm-2 col-xs-12">
           <ul>
-            <li class = "headMenu"><a href = "main.html">ホーム</a></li>
+            <li class = "headMenu"><a href = "index.html">ホーム</a></li>
             <li class = "headMenu"><a href = "about.html">研究会について</a></li>
             <li class = "headMenu"><a href = "prepare.html">対馬についての予習</a></li>
             <li class = "headMenu"><a href = "traffic.html">交通案内</a></li>
