--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
+<!DOCTYPE html>
 <html lang="ja">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>第2回市民共創知研究会 | 市民共創知研究会(JSAI SIG-CCI)</title>
-<meta name="viewport" content="width=device-width", initial-scale=1">
-
-</head>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>第2回市民共創知研究会 | 市民共創知研究会(JSAI SIG-CCI)</title>
+    <!--
+    <link rel="shortcut icon" href="Pictures/logo.png" type="image/png">
+    -->
+  </head>
 <body>
   <!-- ロード画面開始 -->
   <div id="loader-bg">
@@ -17,131 +21,167 @@
   <!-- ロード画面終了 -->
 
   <!-- 通常画面開始 -->
-  <!-- ヘッダー開始 -->
   <div id="wrap" class="container-fluid">
-      <div class="row">
-        <div id = "headerArea" class="col-sm-2 col-xs-12">
-          <ul>
-            <li class = "headMenu"><a href = "index.html">ホーム</a></li>
-            <li class = "headMenu"><a href = "about.html">研究会について</a></li>
-            <li class = "headMenu"><a href = "prepare.html">対馬についての予習</a></li>
-            <li class = "headMenu"><a href = "traffic.html">交通案内</a></li>
-            <li class = "headMenu">エントリーフォーム</li>
-            <li class = "headMenu">直前告知内容</li>
-          </ul>
-          <!-- サイドメニュー開始 -->
-            <input type="checkbox" id="navTgl">
-
-            <label for="navTgl" class="open">≡</label>
-            <label for="navTgl" class="close"></label>
-            <nav class="menu">
-              <h2>menu</h2>
-              <ul>
-              </ul>
-            </nav>
-            <!-- サイドメニュー終了 -->
+    <!-- ヘッダー(ナビバー )開始 -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <!--タイトル-->
+          <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知研究会</a>
+          <!--トグルボタンの設置-->
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-content">
+            <span class="icon-bar"></span><!-- トグルボタンの横棒　その１  -->
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
         </div>
-    </div>
+
+        <div id="nav-content" class="collapse navbar-collapse">
+          <!--リンクのリスト メニューリスト-->
+          <ul class="nav navbar-nav">
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="about.html">研究会について</a></li>
+            <li><a href="prepare.html">対馬についての予習</a></li>
+            <li><a href="traffic.html">交通案内</a></li>
+            <li><a>エントリーフォーム</a></li>
+          </ul>
+        </div>
+
+        <!-- サイドメニュー開始 -->
+        <input type="checkbox" id="navTgl" class="navbar-toggle">
+        <label for="navTgl" class="open">≡</label>
+        <label for="navTgl" class="close"></label>
+        <nav class="menu">
+          <h2>menu</h2>
+          <ul>
+            <li><a href="#" class="scroll">ページトップ</a></li>
+          </ul>
+        <!-- サイドメニュー終了 -->
+        </nav>
+      </div>
+    </nav>
     <!-- ヘッダー終了 -->
 
     <!-- パンくずリスト開始 -->
     <div id="wrapper">
       <p class="pankuzu">
-        <a href="main.html">第２回</a>
+        <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知 研究会 Web</a>
+        &nbsp;&nbsp;&gt;&nbsp;&nbsp;
+        <a href="index.html">第２回 研究会 Web</a>
       </p>
     </div>
     <!-- パンくずリスト終了 -->
-
+    <!-- スライドショー開始 -->
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="http://placehold.it/600x200/fafafa/20b2aa/&text=slide_1" alt="...">
-        <div class="carousel-caption">
-          <h5>市民共創知研究会</h5>
-          <p>和多都美神社</p>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="http://placehold.it/600x200/fafafa/20b2aa/&text=slide_1" alt="...">
+          <div class="carousel-caption">
+            <h5>市民共創知研究会</h5>
+            <p>和多都美神社</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="http://placehold.it/600x200/fafafa/20b2aa/&text=slide_2" alt="...">
+          <div class="carousel-caption">
+            <h5>市民共創知研究会</h5>
+            <p>白嶽</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="Pictures/3.jpg" alt="...">
+          <div class="carousel-caption">
+            <h5>市民共創知研究会</h5>
+            <p>ツシマヤマネコ</p>
+          </div>
         </div>
       </div>
-      <div class="item">
-        <img src="http://placehold.it/600x200/fafafa/20b2aa/&text=slide_2" alt="...">
-        <div class="carousel-caption">
-          <h5>市民共創知研究会</h5>
-          <p>白嶽</p>
-        </div>
+
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <!-- スライドショー終了 -->
+    <!-- 主文開始 -->
+    <div class="container">
+      <div class="row">
+      <!-- 右メニュー開始 -->
+      <div class="col-xs-12 col-md-4 col-md-push-8">
+        <h3>目次</h3>
+        <ul>
+          <li><a href="#news">第2回研究会について</a></li>
+          <li><a href="#photoes">第2回研究会フォトライブラリー</a></li>
+          <li><a href="#timetable">タイムテーブル</a></li>
+          <li><a href="#sessions">セッション分け</a></li>
+        </ul>
+        <!--h3>過去の研究会</h3-->
+        <h3>外部リンク</h3>
+        <ul>
+          <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html" target="_blank">第1回市民共創知研究会@岩手県遠野市 遠野ふるさと村</a></li>
+          <li><a href="https://mirai-making.herokuapp.com" target="_blank">みらいらぼ</a></li>
+        </ul>
+
+        <h3>新着情報</h3>
+        <table class="table table-condensed">
+          <tr><th>Date</th><th>Contents</th></tr>
+          <tr>
+            <td>2017/02/20</td>
+            <td>フォトライブラリー更新</td>
+          </tr>
+        </table>
       </div>
-      <div class="item">
-        <img src="Pictures/3.jpg" alt="...">
-        <div class="carousel-caption">
-          <h5>市民共創知研究会</h5>
-          <p>ツシマヤマネコ</p>
+      <!-- 右メニュー終わり -->
+      <div class="col-xs-12 col-md-8 col-md-pull-4">
+        <div class="row">
+          <div class="col-xs-12" id="articletop">
+            <h3>第一回研究会まとめ</h3>
+            <p>第1回研究会お疲れ様でした．</p>
+            <p>研究会での経験を市民共創プロジェクトや第2回研究会に是非とも生かしていきましょう．</p>
+            <ul>
+              <li>第1回研究会報告書: <a href="../files/conclusion/第一回研究会報告資料.pdf">第１回共創知研究会報告資料</a></li>
+              <li>市民共創プロジェクト: <a href="https://mirai-making.herokuapp.com" target="_blank">みらいらぼ</a></li>
+            </ul>
+          </div>
+
+          <div class="col-xs-12" id="news">
+            <h3>直前告知</h3>
+          </div>
+
         </div>
       </div>
     </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
-
-
-    <div class="container">
-      <div class="row">
-
-        <!-- 目次 -->
-        <div class="col-xs-12 col-md-4 col-md-push-8">
-          <h3>目次</h3>
-          <ul>
-            <li><a href="#news">第1回研究会について</a></li>
-            <li><a href="#photoes">第1回研究会フォトライブラリー</a></li>
-            <li><a href="#timetable">タイムテーブル</a></li>
-            <li><a href="#sessions">セッション分け</a></li>
-          </ul>
-          <!--h3>過去の研究会</h3-->
-          <h3>外部リンク</h3>
-          <ul>
-            <li><a href="https://mirai-making.herokuapp.com" target="_blank">みらいらぼ</a></li>
-          </ul>
-
-          <h3>新着情報</h3>
-          <table class="table table-condensed">
-            <tr><th>Date</th><th>Contents</th></tr>
-            <tr>
-              <td>2017/02/20</td>
-              <td>フォトライブラリー更新</td>
-            </tr>
-          </table>
-        </div>
-        <!-- 目次終わり -->
-
-
-        <div class="col-xs-12 col-md-8 col-md-pull-4">
-          <div class="row">
-            <div class="col-xs-12" id="articletop">
-              <h3>第一回研究会まとめ</h3>
-              <p>第1回研究会お疲れ様でした．</p>
-              <p>研究会での経験を市民共創プロジェクトや第2回研究会に是非とも生かしていきましょう．</p>
-              <ul>
-                <li>第1回研究会報告書: <a href="../files/conclusion/第一回研究会報告資料.pdf">第１回共創知研究会報告資料</a></li>
-                <li>市民共創プロジェクト: <a href="https://mirai-making.herokuapp.com" target="_blank">みらいらぼ</a></li>
-              </ul>
-            </div>
+    <!-- 主文終了 -->
+    <!-- フッター開始 -->
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+	     <div class="container-fluid">
+		       <div class="navbar-brand">
+             <p>
+               Copyright © 2016 <a>JSAI SIG-CCI</a>. Some Rights Reserved.<br>
+             </p>
+		      </div>
+          <div class="navbar-brand">
+            <p>
+              <a href="#" class="scroll" id="test" data-offset="50">トップに戻る</a>
+            </p>
           </div>
-        </div>
-
-      <div id = "footerArea"></div>
+	       </div>
+   </nav>
+  <!-- フッター終了 -->
   </div>
   <!-- 通常画面終了 -->
 
@@ -151,6 +191,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
    <!-- BootstrapのJS読み込み -->
    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+   <script src="Scroll.js"></script>
    <script src="Loading.js"></script>
    <link rel="stylesheet" href="BS_OverWrite.css">
    <link rel="stylesheet" href="FlexBoxStyle.css">
