セクションの見た目を整えた。

--- a/about.html
+++ b/about.html
@@ -70,26 +70,49 @@
     <div class="contents">
         <article>
           <h1>研究会について</h1>
+          <section id="article0">
+            <h3>芳野魁メッセージ(テスト)</h3>
+            <section class="comment_item">
+                    <div class="item_img"><img src="Pictures/face22.jpg" alt="芳野 魁"></div>
+                    <div class="item_txt">
+                        <h2 class="ttl"><span>名古屋工業大学</span><br>芳野 魁</h2>
+                        <p class="txt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト<br>
+                          テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト <br>
+                          テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
+                        </p>
+            </section>
+          </section>
+
           <section id="article1">
             <h3>伊藤先生メッセージ</h3>
-            <figure>
-              <img src="Pictures/Slide1.png">
-              <p>伊藤先生からのメッセージ</p>
-            </figure>
+            <section class="comment_item">
+                    <div class="item_img"><img src="Pictures/noimage.jpg" alt="伊藤　孝行"></div>
+                    <div class="item_txt">
+                        <h2 class="ttl"><span>名古屋工業大学</span><br>伊藤 孝行</h2>
+                        <p class="txt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト<br>
+                          テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト <br>
+                          テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
+                        </p>
+            </section>
           </section>
 
           <section id="article2">
             <h3>実行委員より</h3>
-            <figure>
-              <img src="Pictures/Slide2.png">
-              <p></p>
-            </figure>
+            <section class="comment_item">
+                    <div class="item_img"><img src="Pictures/noimage.jpg" alt="写真"></div>
+                    <div class="item_txt">
+                        <h2 class="ttl"><span>所属</span><br>名前</h2>
+                        <p class="txt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト<br>
+                          テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト <br>
+                          テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
+                        </p>
+            </section>
           </section>
 
           <section id="article3">
             <h3>会の概要・目的</h3>
             <figure>
-              <img src="Pictures/Slide3.png">
+              <img src="Pictures/noimage.jpg">
               <p></p>
             </figure>
           </section>
@@ -97,7 +120,7 @@
           <section id="article4">
             <h3>スケジュール(案)</h3>
             <figure>
-              <img src="Pictures/Slide4.png">
+              <img src="Pictures/noimage.jpg">
               <p></p>
             </figure>
           </section>
@@ -105,7 +128,7 @@
           <section id="article5">
             <h3>みらいらぼの紹介</h3>
             <figure>
-              <img src="Pictures/Slide5.png">
+              <img src="Pictures/noimage.jpg">
               <p></p>
             </figure>
           </section>
@@ -113,7 +136,7 @@
           <section id="article6">
             <h3>共創・共通善とは</h3>
             <figure>
-              <img src="Pictures/Slide1.png">
+              <img src="Pictures/noimage.jpg">
               <p></p>
             </figure>
           </section>
