--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="http://placehold.it/600x200/fafafa/20b2aa/&text=slide_1" alt="...">
+          <img src="Pictures/noimage.jpg" alt="...">
           <div class="carousel-caption">
             <h5>市民共創知研究会</h5>
             <p>和多都美神社</p>
           </div>
         </div>
         <div class="item">
-          <img src="http://placehold.it/600x200/fafafa/20b2aa/&text=slide_2" alt="...">
+          <img src="Pictures/noimage.jpg" alt="...">
           <div class="carousel-caption">
             <h5>市民共創知研究会</h5>
             <p>白嶽</p>
@@ -133,6 +133,7 @@
         <ul>
           <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html" target="_blank">第1回市民共創知研究会@岩手県遠野市 遠野ふるさと村</a></li>
           <li><a href="https://mirai-making.herokuapp.com" target="_blank">みらいらぼ</a></li>
+          <li><a href="https://mirailab-tushima.herokuapp.com/" target="_blank">みらいらぼ@対馬</a></li>
         </ul>
 
         <h3>新着情報</h3>
