noimage の種類を増やした。

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
           <section id="article1">
             <h3>伊藤先生メッセージ</h3>
             <section class="comment_item">
-                    <div class="item_img"><img src="Pictures/noimage.jpg" alt="伊藤　孝行"></div>
+                    <div class="item_img"><img src="Pictures/noimage3.gif" alt="伊藤　孝行"></div>
                     <div class="item_txt">
                         <h2 class="ttl"><span>名古屋工業大学</span><br>伊藤 孝行</h2>
                         <p class="txt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト<br>
@@ -99,7 +99,7 @@
           <section id="article2">
             <h3>実行委員より</h3>
             <section class="comment_item">
-                    <div class="item_img"><img src="Pictures/noimage.jpg" alt="写真"></div>
+                    <div class="item_img"><img src="Pictures/noimage3.gif" alt="写真"></div>
                     <div class="item_txt">
                         <h2 class="ttl"><span>所属</span><br>名前</h2>
                         <p class="txt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト<br>
@@ -112,7 +112,7 @@
           <section id="article3">
             <h3>会の概要・目的</h3>
             <figure>
-              <img src="Pictures/noimage.jpg">
+              <img src="Pictures/noimage2.jpg">
               <p></p>
             </figure>
           </section>
@@ -120,7 +120,7 @@
           <section id="article4">
             <h3>スケジュール(案)</h3>
             <figure>
-              <img src="Pictures/noimage.jpg">
+              <img src="Pictures/noimage2.jpg">
               <p></p>
             </figure>
           </section>
@@ -128,7 +128,7 @@
           <section id="article5">
             <h3>みらいらぼの紹介</h3>
             <figure>
-              <img src="Pictures/noimage.jpg">
+              <img src="Pictures/noimage2.jpg">
               <p></p>
             </figure>
           </section>
@@ -136,7 +136,7 @@
           <section id="article6">
             <h3>共創・共通善とは</h3>
             <figure>
-              <img src="Pictures/noimage.jpg">
+              <img src="Pictures/noimage2.jpg">
               <p></p>
             </figure>
           </section>
