--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="Pictures/noimage.jpg" alt="...">
+          <img src="Pictures/noimage2.jpg" alt="...">
           <div class="carousel-caption">
             <h5>市民共創知研究会</h5>
             <p>和多都美神社</p>
           </div>
         </div>
         <div class="item">
-          <img src="Pictures/noimage.jpg" alt="...">
+          <img src="Pictures/noimage2.jpg" alt="...">
           <div class="carousel-caption">
             <h5>市民共創知研究会</h5>
             <p>白嶽</p>
           </div>
         </div>
         <div class="item">
-          <img src="Pictures/3.jpg" alt="...">
+          <img src="Pictures/noimage2.jpg" alt="...">
           <div class="carousel-caption">
             <h5>市民共創知研究会</h5>
             <p>ツシマヤマネコ</p>
