--- a/prepare.html
+++ b/prepare.html
@@ -73,7 +73,7 @@
           <section id="article1">
             <h3>対馬の概要</h3>
             <figure>
-              <img src="Pictures/noimage.jpg">
+              <img src="Pictures/noimage2.jpg">
               <p></p>
             </figure>
           </section>
@@ -81,7 +81,7 @@
           <section id="article2">
             <h3>対馬観察日記</h3>
             <figure>
-              <img src="Pictures/noimage.jpg">
+              <img src="Pictures/noimage2.jpg">
               <p></p>
             </figure>
           </section>
@@ -89,7 +89,7 @@
           <section id="article3">
             <h3>フィールドワーク紹介</h3>
             <section class="comment_item">
-                    <div class="item_img"><img src="Pictures/noimage.jpg" alt="写真"></div>
+                    <div class="item_img"><img src="Pictures/noimage2.jpg" alt="写真"></div>
                     <div class="item_txt">
                         <h2 class="ttl"><span>タイトル</span><br>場所</h2>
                         <p class="txt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト<br>
@@ -102,7 +102,7 @@
           <section id="article4">
             <h3>佐藤さんメッセージ</h3>
             <section class="comment_item">
-                    <div class="item_img"><img src="Pictures/noimage.jpg" alt="写真"></div>
+                    <div class="item_img"><img src="Pictures/noimage3.gif" alt="写真"></div>
                     <div class="item_txt">
                         <h2 class="ttl"><span>所属</span><br>名前</h2>
                         <p class="txt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト<br>
@@ -115,7 +115,7 @@
           <section id="article5">
             <h3>主要参加者紹介</h3>
             <section class="comment_item">
-                    <div class="item_img"><img src="Pictures/noimage.jpg" alt="写真"></div>
+                    <div class="item_img"><img src="Pictures/noimage3.gif" alt="写真"></div>
                     <div class="item_txt">
                         <h2 class="ttl"><span>所属</span><br>名前</h2>
                         <p class="txt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト<br>
