--- a/traffic.html
+++ b/traffic.html
@@ -72,7 +72,7 @@
         <section id="article1">
           <h3>各都市からアクセス</h3>
           <figure>
-            <img src="Pictures/noimage.jpg">
+            <img src="Pictures/noimage2.jpg">
             <p></p>
           </figure>
         </section>
@@ -80,7 +80,7 @@
         <section id="article2">
           <h3>目安費用</h3>
           <figure>
-            <img src="Pictures/noimage.jpg">
+            <img src="Pictures/noimage2.jpg">
             <p></p>
           </figure>
         </section>
@@ -88,7 +88,7 @@
         <section id="article3">
           <h3>佐藤さんオススメ経路</h3>
           <figure>
-            <img src="Pictures/noimage.jpg">
+            <img src="Pictures/noimage2.jpg">
             <p></p>
           </figure>
         </section>
@@ -96,7 +96,7 @@
         <section id="article4">
           <h3>三井さんチャレンジ</h3>
           <figure>
-            <img src="Pictures/noimage.jpg">
+            <img src="Pictures/noimage2.jpg">
             <p></p>
           </figure>
         </section>
