フィールドワーク専用のページ fieldWork.html を作成した。間もなくフィールドワークのコンテンツを完全移行予定。

--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">研究会について</a></li>
             <li><a href="prepare.html">対馬についての予習</a></li>
+            <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
             <li><a>エントリーフォーム</a></li>
           </ul>
@@ -48,7 +49,6 @@
             <li><a href="#article3" class="scroll">会の概要・目的</a></li>
             <li><a href="#article4" class="scroll">スケジュール(案)</a></li>
             <li><a href="#article5" class="scroll">みらいらぼの紹介</a></li>
-            <li><a href="#article6" class="scroll">共創・共通善とは</a></li>
           </ul>
         <!-- サイドメニュー終了 -->
         </nav>
@@ -61,7 +61,7 @@
           <p class="pankuzu">
             <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知 研究会 Web</a>
             &nbsp;&nbsp;&gt;&nbsp;&nbsp;
-            <a href="traffic.html">第２回 研究会 Web</a>
+            <a href="index.html">第２回 研究会 Web</a>
             &nbsp;&nbsp;&gt;&nbsp;&nbsp;
             <a href="about.html">研究会について</a>
           </p>
@@ -106,7 +106,7 @@
           <section id="article2">
             <h3>実行委員より</h3>
             <section class="comment_item">
-                    <div class="item_img"><img src="Pictures/ikeda.jpg" alt="写真"></div>
+                    <div class="item_img"><img src="Pictures/Ikeda.jpg" alt="写真"></div>
                     <div class="item_txt">
                         <h2 class="ttl"><span>第2回研究会　実行委員長</span><br>池田　晃一</h2>
                         <h5 class="MessageContent">専門分野</h5>
@@ -167,25 +167,29 @@
 
           <section id="article4">
             <h3>スケジュール(案)</h3>
-            <figure id="Timetable" class="pattern5">
-              <center>
-              <img src="Pictures/About/Timetable.jpg">
-            </center>
-            <a href="Files/About/20170322_Timetable.pdf">タイムテーブルのpdf</a>
-              <p></p>
-            </figure>
+            <!-- 6月30日 -->
+            <h4>6月30日(金)</h4>
+            <div class="row" align="center">
+              <div class="col-lg-12 col-md-12"><img src="Pictures/About/Timetable0630.jpg" alt="写真"></div>
+            </div>
+            <p>
+              フィールドワークの詳しい内容は<a>こちら</a>
+            </p>
+            <!-- ７月１日(土) -->
+            <h4>7月1日(土)</h4>
+            <div class="row" align="center">
+              <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/About/Timetable0701.jpg" alt="写真"></div>
+            </div>
+            <!-- ７月2日(日) -->
+            <h4>7月2日(日)</h4>
+            <div class="row" align="center">
+              <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/About/Timetable0702.jpg" alt="写真"></div>
+            </div>
+            <a href="./Files/About/20170322_Timetable.pdf">タイムテーブルのpdf</a>
           </section>
 
           <section id="article5">
             <h3>みらいらぼの紹介</h3>
-            <figure>
-              <img src="Pictures/noimage2.jpg">
-              <p></p>
-            </figure>
-          </section>
-
-          <section id="article6">
-            <h3>共創・共通善とは</h3>
             <figure>
               <img src="Pictures/noimage2.jpg">
               <p></p>
