--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">研究会について</a></li>
             <li><a href="prepare.html">対馬についての予習</a></li>
+            <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
             <li><a>エントリーフォーム</a></li>
           </ul>
@@ -122,10 +123,10 @@
       <div class="col-xs-12 col-md-4 col-md-push-8">
         <h3>目次</h3>
         <ul>
-          <li><a href="#news">第2回研究会について</a></li>
-          <li><a href="#photoes">第2回研究会フォトライブラリー</a></li>
-          <li><a href="#timetable">タイムテーブル</a></li>
-          <li><a href="#sessions">セッション分け</a></li>
+          <li><a href="#news" class="scroll">第2回研究会概要</a></li>
+          <li><a href="#photoes" class="scroll">第2回研究会フォトライブラリー</a></li>
+          <li><a href="#timetable" class="scroll">タイムテーブル</a></li>
+          <li><a href="#sessions" class="scroll">セッション分け</a></li>
         </ul>
         <!--h3>過去の研究会</h3-->
         <h3>外部リンク</h3>
@@ -158,7 +159,19 @@
           </div>
 
           <div class="col-xs-12" id="news">
-            <h3>直前告知</h3>
+            <h3>第２会研究会概要</h3>
+            <h5 class="Emphasis2">みらいらぼin対馬　～対馬の宝と向かい合う3日間</h5>
+            <p>私たち市民共創知研究会は、地域がかかえている問題に、市民の方々と一緒に取り組み、解決していくための場をつくるために活動をしています。
+              第2回の舞台は長崎県対馬市。国境の離島に乗り込み、地域を知り、課題について対話します。</p>
+            <p>研究者や技術者だけでなく、いろいろな経験を積んだ方が集まることによって対話が加速し、解決に向けて動き出します。</p>
+            <p>みなさんのご参加をお待ちしています。</p>
+            <div class="overview">
+              <dt>名称：</dt><dd>人工知能学会 市民共創知研究会　第2回研究会</dd>
+              <dt>会期：</dt><dd>2017年6月30日(金)～7月2日(日)</dd>
+              <dt>会場：</dt><dd>長崎県　対馬市　西山寺</dd>
+              <dt>主催：</dt><dd>人工知能学会　市民共創知研究会</dd>
+              <dt>後援：</dt><dd>対馬市、(一社)対馬観光物産協会</dd>
+            </div>
           </div>
 
         </div>
@@ -169,16 +182,14 @@
     <!-- フッター開始 -->
     <nav class="navbar navbar-default navbar-fixed-bottom">
 	     <div class="container-fluid">
-		       <div class="navbar-brand">
+          <center>
+		       <div class="navbar-brand footer">
              <p>
                Copyright © 2016 <a>JSAI SIG-CCI</a>. Some Rights Reserved.<br>
+                <a href="#" class="scroll" id="test" data-offset="50">トップに戻る</a>
              </p>
 		      </div>
-          <div class="navbar-brand">
-            <p>
-              <a href="#" class="scroll" id="test" data-offset="50">トップに戻る</a>
-            </p>
-          </div>
+        </center>
 	       </div>
    </nav>
   <!-- フッター終了 -->
