--- a/prepare.html
+++ b/prepare.html
@@ -31,6 +31,7 @@
               <li><a href="index.html">ホーム</a></li>
               <li><a href="about.html">研究会について</a></li>
               <li><a href="prepare.html">対馬についての予習</a></li>
+              <li><a href="fieldWork.html">フィールドワーク</a></li>
               <li><a href="traffic.html">交通案内</a></li>
               <li><a>エントリーフォーム</a></li>
             </ul>
@@ -64,7 +65,7 @@
           <p class="pankuzu">
             <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知 研究会 Web</a>
             &nbsp;&nbsp;&gt;&nbsp;&nbsp;
-            <a href="traffic.html">第２回 研究会 Web</a>
+            <a href="index.html">第２回 研究会 Web</a>
             &nbsp;&nbsp;&gt;&nbsp;&nbsp;
             <a href="prepare.html">対馬についての予習</a>
           </p>
@@ -493,22 +494,93 @@
               もっと気楽に、「対馬に行ったことがない！」という方には、濃密な対馬体験をしていただければ幸いです。お待ちしております。
             </p>
           </div>
-          <!--ac-content--></div>
-<!--accordion--></div>
+            </div><!--ac-content-->
+          </div><!--accordion-->
         </section>
 
           <section id="article3">
             <h3>フィールドワーク紹介</h3>
             <section class="comment_item">
-                    <div class="item_img"><img src="Pictures/noimage2.jpg" alt="写真"></div>
-                    <div class="item_txt">
-                        <h2 class="ttl"><span>タイトル</span><br>場所</h2>
-                        <p class="txt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト<br>
-                          テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト <br>
-                          テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
+                    <div class="container show-grid">
+                      <!-- フィールドワーク01,02 -->
+                      <div class="row">
+                        <div class="col-md-12"><img class="double" src="Pictures/Prepare/FieldWork/FieldWork0102.jpg" alt="写真"></div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6 double-fw-Text">
+                          <h4>フィールドワーク1　対馬の自然環境保全(全日)コース</h4>
+                          <p class="item_txt">
+                            フェリーで来島された方は徒歩でふれあい処に集まってください。その後、福岡1便、長崎1便の飛行機で来島された方を迎えに対馬空港に向かいます。
+                            対馬空港からは佐護のヤマネコセンターに向かいます。昼食は対馬特産黄金あなごを味わいます。
+                            午後は半日コースの方と合流して野生順化ステーションでヤマネコの順化についてのレクチャを受けます。その後、厳原中心部で解散となります。
+                          </p>
+                        </div>
+                        <div class="col-md-6 double-fw-Text">
+                          <h4>フィールドワーク2　対馬の自然環境保全(半日)コース</h4>
+                          <p class="item_txt">
+                            福岡2便、長崎2便の飛行機で来島の方は対馬空港までお迎えに上がります。ジェットフォイルで来島の方は徒歩でふれあい処に集まってください。
+                            ふれあい処で対馬の郷土料理を味わった後、全日コースの方と合流して野生順化ステーションでヤマネコの順化についてのレクチャを受けます。その後、厳原中心部で解散となります。
+                          </p>
+                        </div>
+                      </div>
+                      <!-- フィールドワーク03 -->
+                      <div class="row" align="left">
+                        <div class="col-md-12"><img class="double" src="Pictures/Prepare/FieldWork/FieldWork03.jpg" alt="写真"></div>
+                      </div>
+                      <div class="row">
+                        <h4>フィールドワーク3　対馬の観光ガイド・史跡コース</h4>
+                        <div class="col-md-6 double-fw-Text">
+                          <p class="item_txt">
+                            ＜晴天時＞奈良時代の朝鮮式山城と明治時代の砲台が残る金田城をめぐるコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、金田城に移動、城山を登ります。下山後は厳原中心部で解散となります。
+                          </p>
+                        </div>
+                        <div class="col-md-6 double-fw-Text">
+                          <p class="item_txt">
+                            ＜雨天時＞対馬の神話、伝説の地をめぐるコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、海運の要所であった西の漕手、住吉神社を見学し、竜宮伝説が残る和多津美神社を訪れます。天気が良くなれば烏帽子岳展望台から浅茅湾のリアス地形をご確認いただけます。その後、厳原中心部で解散となります。
+                          </p>
+                        </div>
+                      </div>
+                      <!-- フィールドワーク04 -->
+                        <div class="row" align="center">
+                          <div class="col-lg-12 col-md-12"><img class="single" src="Pictures/Prepare/FieldWork/FieldWork04.jpg" alt="写真"></div>
+                        </div>
+                        <div class="row">
+                          <h4>フィールドワーク4　対馬の漁業振興・特産品コース</h4>
+                          <div class="col-lg-12 col-md-12 fw-Text">
+                            <p class="item_txt">
+                              地場産業の活性化に取り組む方を訪ねるツアーです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、海産物の6次産業化、地域力発信に力を入れている真心水産を訪れます。比田勝港に近い日昇漁業ではIターンから漁業就業、企業に至った経緯などを伺います。その後、厳原中心部で解散となります。
+                            </p>
+                          </div>
+                        </div>
+                    <!-- フィールドワーク05 -->
+                    <div class="row" align="center">
+                      <div class="col-lg-12 col-md-12"><img class="single" src="Pictures/Prepare/FieldWork/FieldWork05.jpg" alt="写真"></div>
+                    </div>
+                    <div class="row">
+                      <h4>フィールドワーク5　対馬の文化財保護コース</h4>
+                      <div class="col-lg-12 col-md-12 fw-Text">
+                        <p class="item_txt">
+                          対馬の文化財と建設中の博物館についてのレクチャと実地検分を兼ねたコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。
+                          ジェットフォイルで来島の方はふれあい処まで徒歩でお願いします。ふれあい処で対馬の郷土料理を味わった後、博物館準備室の方から建設中の博物館に関するレクチャをいただきます。
+                          その後、宗家の菩提寺である万松院、江戸時代のドックであるお船江をめぐります。最後は厳原中心部で解散となります。
                         </p>
-            </section>
-          </section>
+                      </div>
+                    </div>
+                    <!-- フィールドワーク03~05 オプション -->
+                    <div class="row" align="center">
+                      <div class="col-lg-12 col-md-12"><img class="single" src="Pictures/Prepare/FieldWork/FieldWorkAMOption.jpg" alt="写真"></div>
+                    </div>
+                    <div class="row">
+                      <h4>フィールドワーク3~5　午前オプション</h4>
+                      <div class="col-lg-12 col-md-12 fw-Text">
+                        <p class="item_txt">
+                          フィールドワーク3~5を希望される方で、福岡、長崎1便およびフェリーでの来島をされる方にはオプションコースをご用意しています。元寇襲来の地など史跡を巡るコースになっています。別途料金は発生しません。
+                        </p>
+                      </div>
+                    </div>
+                  </div><!-- <div class="container show-grid"> -->
+            </section><!-- <section class="comment_item"> -->
+          </section><!-- <section id="article3"> -->
 
           <section id="article4">
             <h3>佐藤さんメッセージ</h3>
